--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Hangman Game</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> -->
 
     <!-- My CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Bangers|VT323" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Bangers|VT323" rel="stylesheet"> -->
 
 </head>
 <body>
@@ -26,7 +26,7 @@
     
         <main role="main">
                 
-            <div class="jumbotron jumbotron-fluid text-center" style="background-color: black">
+            <div class="jumbotron jumbotron-fluid text-center">
                 <h1 class="display-3">Rock the Ages Edition</h1>
                 <br>
                 <h2 class="text-muted">Press any key to start...</h2>
